[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/subweapons_xandria.png" type="Texture" id=1]
[ext_resource path="res://objects/SubweaponShuriken.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 5.8277

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("subweapons_xandria:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_sound"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "show_reverse"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("subweapons_xandria:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_sound"
} ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 8.086

[node name="SubweaponShuriken" type="RigidBody2D" groups=[
"subweapon",
]]
collision_layer = 16
collision_mask = 8
gravity_scale = 0.0
contacts_reported = 4
contact_monitor = true
script = ExtResource( 2 )

[node name="subweapons_xandria" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 13, 13, 24, 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show = SubResource( 2 )
anims/show_reverse = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.19209e-07, 0 )
scale = Vector2( 0.948546, 0.873503 )

[node name="TimerDelete" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SubWeaponArea" type="Area2D" parent="." groups=[
"player_weapon",
]]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SubWeaponArea"]
shape = SubResource( 4 )

[connection signal="body_shape_entered" from="." to="." method="_on_SubweaponShuriken_body_shape_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="TimerDelete" to="." method="_on_TimerDelete_timeout"]
[connection signal="area_entered" from="SubWeaponArea" to="." method="_on_SubWeaponArea_area_entered"]
